Require user to specify the target for AsciiDoc formatting